@@ -1,5 +1,5 @@
 /* List the relocation types for x86-64.  -*- C -*-
-   Copyright (C) 2000, 2001, 2002, 2003, 2005 Red Hat, Inc.
+   Copyright (C) 2000, 2001, 2002, 2003, 2005, 2009 Red Hat, Inc.
    This file is part of Red Hat elfutils.
 
    Red Hat elfutils is free software; you can redistribute it and/or modify
@@ -49,3 +49,4 @@ RELOC_TYPE (TLSLD,	REL)
 RELOC_TYPE (DTPOFF32,	REL)
 RELOC_TYPE (GOTTPOFF,	REL)
 RELOC_TYPE (TPOFF32,	REL)
+RELOC_TYPE (IRELATIVE,	EXEC|DYN)
